--- a/src/logging.ini
+++ b/src/logging.ini
@@ -2,20 +2,26 @@
 keys=root
 
 [handlers]
-keys=stream_handler
+keys=stream_handler, file_handler
 
 [formatters]
 keys=formatter
 
 [logger_root]
 level=DEBUG
-handlers=stream_handler
+handlers=stream_handler, file_handler
 
 [handler_stream_handler]
 class=StreamHandler
 level=DEBUG
 formatter=formatter
 args=(sys.stderr,)
+
+[handler_file_handler]
+class=FileHandler
+level=DEBUG
+formatter=formatter
+args=('goodreads.log','w')
 
 [formatter_formatter]
 format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
